--- a/api/package.json
+++ b/api/package.json
@@ -11,15 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@adminjs/express": "^5.1.0",
+    "adminjs": "^6.8.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.25.3"
+    "sequelize": "^6.25.3",
+    "tslib": "^2.5.0"
   }
 }
