--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "sass": "^1.56.0",
     "web-vitals": "^2.1.4"
   },
