--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "moment": "^2.29.4",
     "react": "^18.0.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.0.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
