--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@adminjs/express": "^5.1.0",
     "admin-bro": "^4.0.1",
     "adminjs": "^6.8.3",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
