--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "khalti-checkout-web": "^2.2.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-calendar": "^4.0.0",
