--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
