--- a/api/config/config.json
+++ b/api/config/config.json
@@ -8,8 +8,8 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "password",
+    "database": "social",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
